# restaurant-finder

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  ruff.toml
client/: .prettierrc  config.js.example  eslint.config.mjs  index.html  package-lock.json  package.json
client/public/: manifest.json
client/src/: App.jsx  axiosInstance.js
client/src/components/: Home.jsx  MapComponent.js  MapComponent.jsx  Query.jsx  TelegramBotButton.jsx
restaurant-finder/: const.py  criteria.py  database.py  log.py  main.py  models.py  types.py
restaurant-finder/ai/: main.py
restaurant-finder/api/: openai.py  opencage.py  yelp.py
restaurant-finder/bot/: handlers.py  main.py
restaurant-finder/routes/: callbacks.py  frontend.py  queries.py
